--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -574,7 +574,7 @@ input[type="radio"]+label:before {
 .icon:before {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: FontAwesome;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: normal;
     text-transform: none !important;
@@ -660,7 +660,7 @@ ul.icons li a:before {
 
 ul.icons li a:before {
     color: #ffffff;
-    text-shadow: 1.25px 0px 0px #c8cccf, -1.25px 0px 0px #c8cccf, 0px 1.25px 0px #c8cccf, 0px -1.25px 0px #c8cccf;
+    /*text-shadow: 1.25px 0px 0px #c8cccf, -1.25px 0px 0px #c8cccf, 0px 1.25px 0px #c8cccf, 0px -1.25px 0px #c8cccf;*/
 }
 
 ul.icons li a:hover:before {
