--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -745,7 +745,8 @@ button,
     background-color: transparent;
     border-radius: 4px;
     border: solid 1px #c8cccf;
-    color: #414f57 !important;
+    color: #ffffff !important;
+    font-weight: bold;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
@@ -759,6 +760,7 @@ button:hover,
 .button:hover {
     border-color: crimson;
     color: crimson !important;
+    font-weight: bold;
 }
 
 input[type="submit"].icon,
